@@ -179,14 +179,31 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-return|return
-operator|new
-name|FilteredDocIdSetIterator
-argument_list|(
+specifier|final
+name|DocIdSetIterator
+name|iterator
+init|=
 name|_innerSet
 operator|.
 name|iterator
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|iterator
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+return|return
+operator|new
+name|FilteredDocIdSetIterator
+argument_list|(
+name|iterator
 argument_list|)
 block|{
 annotation|@
