@@ -672,6 +672,206 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testNullIteratorFilteredDocIdSet
+specifier|public
+name|void
+name|testNullIteratorFilteredDocIdSet
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|writer
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newField
+argument_list|(
+literal|"c"
+argument_list|,
+literal|"val"
+argument_list|,
+name|StringField
+operator|.
+name|TYPE_UNSTORED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// First verify the document is searchable.
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|searcher
+operator|.
+name|search
+argument_list|(
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+argument_list|,
+literal|10
+argument_list|)
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+comment|// Now search w/ a Filter which returns a null DocIdSet
+name|Filter
+name|f
+init|=
+operator|new
+name|Filter
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|DocIdSet
+name|getDocIdSet
+parameter_list|(
+name|AtomicReaderContext
+name|context
+parameter_list|,
+name|Bits
+name|acceptDocs
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|DocIdSet
+name|innerNullIteratorSet
+init|=
+operator|new
+name|DocIdSet
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|DocIdSetIterator
+name|iterator
+parameter_list|()
+block|{
+return|return
+literal|null
+return|;
+block|}
+block|}
+decl_stmt|;
+return|return
+operator|new
+name|FilteredDocIdSet
+argument_list|(
+name|innerNullIteratorSet
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|boolean
+name|match
+parameter_list|(
+name|int
+name|docid
+parameter_list|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+return|;
+block|}
+block|}
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|searcher
+operator|.
+name|search
+argument_list|(
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+argument_list|,
+name|f
+argument_list|,
+literal|10
+argument_list|)
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
